charts/trip/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trip
  namespace: trip
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trip
  template:
    metadata:
      labels:
        app: trip
    spec:
      containers:
        - name: trip
          image: ghcr.io/itskovacs/trip:latest
          ports:
            - containerPort: 8000
              name: http
          resources:
            requests:
              memory: 256Mi
              cpu: 10m
          volumeMounts:
            - name: trip-data
              mountPath: /app/data/
      volumes:
        - name: trip-data
          persistentVolumeClaim:
            claimName: trip-data
