charts/trip/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trip
  namespace: trip
spec:
  selector:
    app: trip
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      name: http
  type: ClusterIP
